Fix some more tests
Summary:
Fixed:
 * PreparedStatementTest
 * CredentialPluginTest
 * LocaInfileTest
 * SslTest (not really, test passes, but cert validation seems to not work)
 * Deleted SHA256 auth test as we don't support this

Test Plan: run the tests

Reviewers: amakarovych-ua

Reviewed By: amakarovych-ua

Subscribers: engineering-list

JIRA Issues: PLAT-5820

Differential Revision: https://grizzly.internal.memcompute.com/D51978